# economy

./: CMakeLists.txt  README.md
include/: Application.hpp  Common.hpp  Utils.hpp
include/components/: Agent.hpp  Demand.hpp  Offer.hpp  Product.hpp
include/systems/: AgentConsoleDisplayer.hpp  AgentGuiDisplayer.hpp  AgentSpawner.hpp  CurrencyCreator.hpp  MarketResolver.hpp  OfferCreator.hpp  ScriptableSystem.hpp
scripts/CurrencyCreator/: configure.chai
scripts/default/: configure.chai  update.chai
src/: Application.cpp  main.cpp
src/components/: Agent.cpp  Product.cpp
src/systems/: AgentConsoleDisplayer.cpp  AgentGuiDisplayer.cpp  AgentSpawner.cpp  CurrencyCreator.cpp  MarketResolver.cpp  OfferCreator.cpp
